# compare-programming-languages

./: .gitignore  .tool-versions  README.adoc  cleanup.sh  doAll.sh  initAsdf-vm.sh  initInfra.sh
build-scripts/: collect-usage-data.sh  generic-docker-build.sh  generic-k8s-kustomize-build.sh  generic-k8s-manifests-build.sh  generic-load-tests.sh  generic-rest-api-validation.sh  golang-chi-build-deploy.sh  golang-chi-load-tests.sh  java-19-pure-apko-loom-build-deploy.sh  java-19-pure-apko-loom-load-tests.sh  java-pure-apko-build-deploy.sh  java-pure-apko-graalvm-build-deploy.sh  java-pure-apko-graalvm-load-tests.sh  (+19 more)
java-pure/: pom.xml  (+3 more)
rust-actix-optimized/: Cargo.toml  README.md  build-and-push-optimized-actix-rust.sh
rust-actix-optimized/docker/: Dockerfile
rust-actix-optimized/src/: main.rs
rust-actix-optimized/src/request_guards/greeting_request_guard/: greeting_basic_auth.rs
rust-actix-optimized/src/services/: greeting.rs  probes.rs  user.rs  version.rs
rust-rocket/: Cargo.toml  README.adoc  README.md  Rocket.toml  build-and-push-actix-rust.sh
rust-rocket/docker/: Dockerfile
rust-rocket/k8s/: kustomization.tpl.yaml
rust-rocket/k8s/resources/: autoscaler.yaml  deployment.yaml  ingress.yaml  pdb.yaml  service.yaml
rust-rocket/src/: lib.rs  main.rs  models.rs  request_guards.rs  services.rs
rust-rocket/src/models/: new_user.rs  user.rs
rust-rocket/src/request_guards/: greeting_request_guard.rs
rust-rocket/src/request_guards/greeting_request_guard/: greeting_basic_auth.rs
rust-rocket/src/services/: greeting.rs  probes.rs  user.rs  version.rs
(+228 files in other folders)
